--- a/css/main.css
+++ b/css/main.css
@@ -2,9 +2,17 @@
     font-family: sans-serif;
 }
 
+body{
+  background-image: url('../image/background_img.jpg');
+  background-size: cover;
+  height: 812px;
+  background-position: center;
+}
+
 .line{
     width: 90%;
     height: 2px;
+    background-color: rgb(200, 1, 80);
 }
 
 .login-box {
